fixed days swiper days

--- a/app/assets/stylesheets/components/_weekcard.scss
+++ b/app/assets/stylesheets/components/_weekcard.scss
@@ -22,9 +22,10 @@
 }
 
 .divjourdelasemaine {
-  width: 75px;
+  padding: 0px 20px 0 0;
   > .jourdelasemaine {
     text-align: center;
+    padding: 5px 10px;
   }
 }
 
