--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -14,7 +14,7 @@
 
 <div class="myownswiper">
   <div class="myownswiper-slides">
-    <div class="divjourdelasemaine ml-3">
+    <div class="divjourdelasemaine ">
       <p class="jourdelasemaine mon <%= "day-active" if Date.today.wday == 1 %>">Lundi</p>
     </div>
     <div class="divjourdelasemaine">
