--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,9 +9,10 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 
-$color-main: #09BC8A;
+$color-main: rgb(250, 74, 12);
 $color-main-transparency: rgba(255, 190, 120, 0.7);
-$color-second: #e3f6f5;
+$color-second:rgb(189, 189, 189);
+$color-second-transparency:rgba(189, 189, 189, 0.5);
 $color-third: #ff4b5c;
 $color-third-transparency: rgba(186, 232, 232, 0.7);
 $color-paragraph: #2d334a;
