--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -38,7 +38,10 @@
           <% if meal.recipe.name == "EMPTY" %>
             <div class="card-externe-ml">
               <div class="card-repas-ml empty">
-                <%#= image_tag "https://img.pixers.pics/pho_wat(s3:700/FO/93/16/42/95/700_FO93164295_1737960c10cf442f2f8ca63be4ab279e.jpg,700,643,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,480,593,jpg)/posters-assiette-vide.jpg.jpg" %>
+                <%= image_tag "https://img.pixers.pics/pho_wat(s3:700/FO/93/16/42/95/700_FO93164295_1737960c10cf442f2f8ca63be4ab279e.jpg,700,643,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,480,593,jpg)/posters-assiette-vide.jpg.jpg" %>
+                <%= link_to week_meal_path(meal.week_id,meal), :method=> :put do %>
+                  <i class="fas fa-plus add"></i>
+                <% end %>
               </div>
               <div class="card-repas-description-ml">
                 <div class="card-description-h1-ml">
@@ -47,9 +50,6 @@
                 <div class="card-description-p-ml">
                   <p><%=meal.moment%></p>
                 </div>
-                <%= link_to week_meal_path(meal.week_id,meal), :method=> :put do %>
-                  <i class="fas fa-plus add"></i>
-                <% end %>
               </div>
             </div>
           <% else %>
@@ -79,6 +79,12 @@
                   <p><%= meal.moment.capitalize %></p>
                 </div>
               </div>
+              <%= link_to week_meal_path(meal.week_id,meal), :method=> :put, class: "chg" do %>
+                <i class="fas fa-sync"></i>
+              <% end %>
+              <%= link_to week_empty_path(meal.week_id,meal), :method=> :put, class: "del"  do %>
+                <i class="fas fa-minus"></i>
+              <% end %>
             </div>
           <% end %>
         <% end %>
