fix ui new recipe form and footer

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -60,3 +60,11 @@
   // padding: 1px 8px 2px 5px; if you want a circle around your icon
   background-color: transparent;
 }
+
+.upload-photo {
+  border: 1px solid #d3d3d3;
+  padding: 12px 13px;
+  cursor: pointer;
+  background: white;
+  border-radius: 7px;
+}
