--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
   width: 100vw;
-  background-color: #F2F2F2;
+  background-color: white;
   margin: 0 auto;
   padding:5px 0;
-  border-radius: 25px;
+  border-radius: 25px 25px 0 0 ;
   box-shadow: 2px 0px 8px rgba(0,0,0,0.07);
 }
 .footer-list {
