Front index meals ok

--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,6 +1,6 @@
 <div class="week-show">
 
-  <div class="menudelasemaine">
+  <div class="propositonmenus">
     <h1>Proposition de menus</h1>
   </div>
 
