--- a/app/assets/stylesheets/components/_card_meals_index.scss
+++ b/app/assets/stylesheets/components/_card_meals_index.scss
@@ -1,3 +1,12 @@
+.propositonmenus {
+  > h1 {
+    font-size: 34px;
+    text-align: left;
+  }
+  width: 250px;
+  padding: 0px 25px 0 24px;
+}
+
 .card-externe-ml {
   display: block;
   background-color: white;
@@ -7,6 +16,7 @@
   position: relative;
   box-shadow: 1px 2px 4px rgba(0,0,0,0.07);
   margin-left: 50px;
+  margin-bottom: 24px;
 }
 
 .card-repas-ml {
@@ -75,25 +85,25 @@
 
 .del{
   position: absolute;
-  top: -42px;
-  right: 25px;
-  // background-color: red;
+  bottom: 1px;
+  left: 3px;
   padding: 1px 8px;
   border-radius: 50%;
   font-size: 27px;
   text-align: center;
   color: $color-main;
-  background-color: $color-second-transparency;
+  // background-color: $color-second-transparency;
+  // background-color: red;
 }
 
 .chg{
   position: absolute;
-  top: 223px;
-  right: 0px;
+  bottom: 1px;
+  right: 3px;
   // background-color: red;
   padding: 0px 6px;
   border-radius: 50%;
-  font-size: 32px;
+  font-size: 27px;
   text-align: center;
   color: $color-main;
 }
