--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-  <h1>Créer votre nouvelle recette!</h1>
+  <h1>Créez votre nouvelle recette!</h1>
   <br>
   <%= simple_form_for @recipe do |f| %>
   <%= f.input :name, label: 'Quelle est le nom de votre recette?', error: 'Utiliser seulement les caracteres alphanumeriques', input_html: { maxlength: 30 } %>
 
   <%= f.input :difficulty, label: 'Quelle est la difficulté?', collection: ["Facile","Moyen","Difficile"], error: "Ne peut pas etre vide" %>
-  <%= f.input :cooking_time, label: 'Quel est le temps de préparation',placeholder: "en minutes", input_html: { min: '5', step: '5' }, error: "Ne peut pas être vide" %>
-  <%= f.input :instructions, as: :text, :input_html => { 'rows' => 5, 'cols' => 10 }, error: 'Au moins 30 caracteres seulement alphanumeriques' %>
+  <%= f.input :cooking_time, label: 'Quel est le temps de préparation?',placeholder: "en minutes", input_html: { min: '5', step: '5' }, error: "Ne peut pas être vide" %>
+  <%= f.input :instructions, as: :text, :input_html => { 'rows' => 5, 'cols' => 10 }, label: 'Quelles sont les étapes à suivre?', error: 'Au moins 30 caracteres seulement alphanumeriques' %>
 
   <%= f.input :photos, as: :file, input_html: { multiple: true, class: "hidden" }, label_html: { class: 'upload-photo'}, label: '📷 Télécharger une photo', error: "Ne peut pas être vide" %>
 
