fix ui et traduire tous les forms/ fix le css image_attached / fix swipper/ traduire les links

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -38,17 +38,17 @@
 
       <% @recipe.photos.each do |photo| %>
         <div class="swiper-slide">
-          <%= cl_image_tag photo.key , crop: :fill %>
+          <%= cl_image_tag photo.key, crop: :fill, class: "swiper-show-image" %>
         </div>
       <% end %>
 
       <% @recipe.photos.each do |photo| %>
         <div class="swiper-slide">
-          <%= cl_image_tag photo.key , crop: :fill %>
+          <%= cl_image_tag photo.key, crop: :fill, class: "swiper-show-image" %>
         </div>
       <% end %>
-
   </div>
+
 
   <!-- If we need pagination -->
   <div class="div-pagination-time">
