--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,7 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+  <h1>Modifiez votre compte</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -10,30 +11,29 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :first_name %>
-    <%= f.input :last_name %>
-    <%= f.input :address %>
+    <%= f.input :first_name, label: 'Prénom' %>
+    <%= f.input :last_name, label: 'Nom' %>
+    <%= f.input :address,label: 'Adresse' %>
     <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
+                hint: "Vous pouvez laisser le champ vide",
                 required: false,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" }, label: 'Mot de passe'  %>
     <%= f.input :password_confirmation,
                 required: false,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" }, label: 'Confirmation de mot de passe'  %>
     <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
+                hint: "Nous avons besoin de votre mot de passe actuel pour confirmer votre changement",
                 required: true,
-                input_html: { autocomplete: "current-password" } %>
-    <%= f.input :num_of_members, as: :integer%>
+                input_html: { autocomplete: "current-password" },label: 'Votre mot de passe actuel' %>
+    <%= f.input :num_of_members, as: :integer,label: 'Combien de personnes dans votre foyer?'%>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Confirmer mes modifications", class: 'btn-main', style:"width: 100%; margin-bottom:30px" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<%= link_to "Effacer mon compte", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<%= link_to "Retour", :back %>
+</div>
