--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,28 @@
-<div class="container w-50">
+<div class="container">
 <!-- Fluid allows you to have a responsive container -->
   <br>
-  <h2>Créer un compte</h2>
+  <br>
+  <h1>Créez un compte</h1>
   <br>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
     <div class="form-inputs">
-      <%= f.input :first_name%>
-      <%= f.input :last_name %>
-      <%= f.input :address %>
+      <%= f.input :first_name, label: 'Prénom'%>
+      <%= f.input :last_name, label: 'Nom' %>
+      <%= f.input :address,label: 'Adresse' %>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
-                  input_html: { autocomplete: "email" }%>
+                  input_html: { autocomplete: "email" }, label: 'Adresse de messagerie'%>
       <%= f.input :password,
                   required: true,
                   hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                  input_html: { autocomplete: "new-password" } %>
+                  input_html: { autocomplete: "new-password" }, label: 'Mot de passe' %>
       <%= f.input :password_confirmation,
                   required: true,
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :num_of_members, as: :integer%>
+                  input_html: { autocomplete: "new-password" }, label: 'Confirmation de mot de passe' %>
+      <%= f.input :num_of_members, as: :integer,label: 'Combien de personnes dans votre foyer?' %>
     </div>
 
     <div class="form-actions">
