--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -76,6 +76,9 @@
 
   <ul class="recipe-show-list">
 
+  <h4><strong>Restrictions: </strong></h4>
+
+
     <h4> <strong>Ingredients: </strong></h4>
     <% @doses.each do |dose| %>
       <li><%= dose.quantity %>
@@ -95,7 +98,6 @@
 
   <h4><strong>Instructions: </strong></h4>
     <p> <%= @recipe.instructions %></p>
-
 
 </div>
 <!--   <nav class="circular-menu"> -->
