FIXED WITH AJAX THE BACK BUTTON + LIKE BTN

--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -1,5 +1,5 @@
 <div class="recipe-index-container">
-  <h1 class="text-left"><%= @cookbook.name %> </h1>
+  <h1 class="text-left pt-2"><%= @cookbook.name %> </h1>
   <p class="text-left">Les innoubliables</p>
 
   <%= form_tag cookbook_path(@cookbook), method: :get do %>
