fix flatpickr and recipe show swiper

--- a/app/assets/stylesheets/components/_additional_swiper_styling.scss
+++ b/app/assets/stylesheets/components/_additional_swiper_styling.scss
@@ -23,5 +23,9 @@
 
 .swiper-pagination-bullet-active {
   background-color: #FA4A0C;
-  margin-right: 5px;
+
+}
+
+.swiper-pagination-bullet {
+  margin: 0 2.5px;
 }
