--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -68,3 +68,12 @@
   background: white;
   border-radius: 7px;
 }
+
+.btn-calendar {
+  color: #FA4A0C;
+  border: 2px solid #FA4A0C;
+  padding: 10px 15px;
+  border-radius: 15px;
+  display: block;
+  margin : 40px auto;
+}
