--- a/app/views/weeks/new.html.erb
+++ b/app/views/weeks/new.html.erb
@@ -1,4 +1,9 @@
-<%= simple_form_for @week do |f| %>
-  <%= f.input :start_day, html5: true, input_html: {class: "flatpickr"}, label: "Quand debute votre semaine?"  %>
-   <%= f.button :submit, class: "btn btn-main" %>
-<% end %>
+<div class="recipe-index-container">
+  <h1 class="mb-4 text-left">Ma semaine commence le :</h1>
+</div>
+<div class="container">
+  <%= simple_form_for @week do |f| %>
+    <%= f.input :start_day, html5: true, input_html: {class: "flatpickr"}, label: false  %>
+    <%= f.button :submit, "Créer ma semaine", class: "btn-calendar" %>
+  <% end %>
+</div>
