Btn meal index modified

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,9 +12,9 @@
 
 .btn-second {
   // font-weight: bold;
-  color: #FFFFFF;
+  color: white;
 
-  background: $color-third;
+  background: $color-main;
   border-radius: 7px;
   padding: 15px 50px;
   text-decoration: none;
