--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,7 +1,7 @@
 <div class="weekbar">
   <div>
     <%= link_to createlisting_week_path(@week.id) do %>
-      <h3 class="black"><span class="pr-3">+</span>Valider les menus</h3>
+      <h3 class="btn-second"></span>Valider les menus</h3>
     <% end %>
   </div>
 </div>
