--- a/app/assets/stylesheets/pages/_loader.scss
+++ b/app/assets/stylesheets/pages/_loader.scss
@@ -85,7 +85,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/assets/home.png");
+  background-image: asset-url("home.png");
   background-size: 375px 812px;
   z-index: 1000;
 }
