--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -8,9 +8,10 @@
   <%= f.input :cooking_time, label: 'Quel est le temps de préparation?',placeholder: "en minutes", input_html: { min: '5', step: '5' }, error: "Ne peut pas être vide" %>
   <%= f.input :instructions, as: :text, :input_html => { 'rows' => 5, 'cols' => 10 }, label: 'Quelles sont les étapes à suivre?', error: 'Au moins 30 caracteres seulement alphanumeriques' %>
 
-  <%= f.input :photos, as: :file, input_html: { multiple: true, class: "hidden" }, label_html: { class: 'upload-photo'}, label: '📷 Télécharger une photo', error: "Ne peut pas être vide" %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true, class: 'hidden', id: 'photo-input'}, label_html: { class: 'upload-photo'}, label: '📷 Télécharger une photo', error: "Ne peut pas être vide" %>
+  <%= image_tag "", width: 50, height:50, class: "hidden", id: "photo-preview" %>
 
-  <%= f.button :submit,'Créer une recette', class: "btn-main", style:"width: 100%; margin-bottom:30px"%>
+  <%= f.button :submit,'Créer une recette', class: "btn-main", style:"width: 100%; margin-bottom:30px; margin-top:10px; "%>
   <% end %>
 </div>
 
