--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -45,7 +45,7 @@
             <% elsif recipe.name == 'Omelette nature' %>
               <%= 'https://img-3.journaldesfemmes.fr/zCdWcXo8IjfSP8MK8uAgxqetCq4=/910x607/smart/09ca38eb418e4ba4b8d5732c442a775b/ccmcms-jdf/10861244.jpg' %>
             <% end %>
-          )">
+          ); background-position: center;">
 
             <h5><%= recipe.name  %></h5>
           </div>
