--- a/app/views/weeks/new.html.erb
+++ b/app/views/weeks/new.html.erb
@@ -4,6 +4,6 @@
 <div class="container">
   <%= simple_form_for @week do |f| %>
     <%= f.input :start_day, html5: true, input_html: {class: "flatpickr"}, label: false  %>
-    <%= f.button :submit, "Créer ma semaine", class: "btn-calendar" %>
+    <%= f.button :submit, "Créer ma semaine", class: "btn-calendar-off" %>
   <% end %>
 </div>
