Revert "delete btn smaller and no more :focus color change"

--- a/app/assets/stylesheets/components/_card_meals_index.scss
+++ b/app/assets/stylesheets/components/_card_meals_index.scss
@@ -85,18 +85,15 @@
 
 .del{
   position: absolute;
-  bottom: 5px;
-  left: 5px;
+  bottom: 1px;
+  left: 3px;
   padding: 1px 8px;
   border-radius: 50%;
-  font-size: 23px;
+  font-size: 27px;
   text-align: center;
   color: $color-main;
   // background-color: $color-second-transparency;
   // background-color: red;
-  &:focus {
-    color: $color-main;
-  }
 }
 
 .chg{
@@ -109,7 +106,8 @@
   font-size: 27px;
   text-align: center;
   color: $color-main;
-  &:focus {
-    color: $color-main;
-  }
+}
+
+.empty-meal{
+  
 }
