for btn chg and del, no more :active effect

--- a/app/assets/stylesheets/components/_card_meals_index.scss
+++ b/app/assets/stylesheets/components/_card_meals_index.scss
@@ -96,6 +96,9 @@
   // background-color: red;
   &:focus {
     color: $color-main;
+  };
+  &:active {
+    color: $color-main;
   }
 }
 
@@ -110,6 +113,9 @@
   text-align: center;
   color: $color-main;
   &:focus {
+    color: $color-main;
+  };
+  &:active {
     color: $color-main;
   }
 }
