Revert "for btn chg and del, no more :active effect"

--- a/app/assets/stylesheets/components/_card_meals_index.scss
+++ b/app/assets/stylesheets/components/_card_meals_index.scss
@@ -94,12 +94,6 @@
   color: $color-main;
   // background-color: $color-second-transparency;
   // background-color: red;
-  &:focus {
-    color: $color-main;
-  };
-  &:active {
-    color: $color-main;
-  }
 }
 
 .chg{
@@ -112,10 +106,8 @@
   font-size: 27px;
   text-align: center;
   color: $color-main;
-  &:focus {
-    color: $color-main;
-  };
-  &:active {
-    color: $color-main;
-  }
+}
+
+.empty-meal{
+  
 }
