--- a/app/assets/stylesheets/components/_card_meals_index.scss
+++ b/app/assets/stylesheets/components/_card_meals_index.scss
@@ -67,8 +67,10 @@
   // background-color: gray;
 }
 
-.empty > img {
-  filter: grayscale(100%);
+.empty {
+  // filter: grayscale(100%);
+  background-color: rgba(230, 230, 230, 1);
+  // box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.07)
 }
 
 .add{
