--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
     <meta name="twitter:image:src" content="<%= meta_image %>">
 
-    <%= favicon_link_tag '/images/icons/favicon.ico'%>
+    <%= favicon_link_tag(source = "favicon.ico", options = {}) public %>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
