--- a/app/assets/stylesheets/components/_grocery.scss
+++ b/app/assets/stylesheets/components/_grocery.scss
@@ -119,7 +119,7 @@ li > i {
 }
 
 .test:nth-child(odd) {
-  background-color: #BDBDBD!important;
+  background-color: #e5e5e5;
 }
 
 // .checklist-alignment::nth-child(even) {
