change the background when crossing out an item

--- a/app/assets/stylesheets/components/_grocery.scss
+++ b/app/assets/stylesheets/components/_grocery.scss
@@ -118,9 +118,13 @@ li > i {
   background-color: orange;
 }
 
-.test:nth-child(odd) {
+.checked-first {
   background-color: #e5e5e5;
 }
+
+// .test:nth-child(odd) {
+//   background-color: #e5e5e5;
+// }
 
 // .checklist-alignment::nth-child(even) {
 //   background-color: white;
