--- a/app/views/grocery_list/show.html.erb
+++ b/app/views/grocery_list/show.html.erb
@@ -5,7 +5,7 @@
   </div>
   <ul id="myUL">
     <% @grocery_list.grocery_items.each do |item| %>
-      <div class="test">
+      <div class="<%= 'checked-first' if item.bought == true %>">
         <%= link_to grocery_item_path(item), method: :put do %>
           <div class="checklist-alignment">
             <div class="checklist"><li id="myLI" class="<%= 'checked' if item.bought == true %>"><i class="far fa-circle"></i> <%= item.total_quantity %><%= item.unit %> - <%= item.ingredient.name %></li></div>
