--- a/app/assets/stylesheets/pages/_show-recipe.scss
+++ b/app/assets/stylesheets/pages/_show-recipe.scss
@@ -1,4 +1,3 @@
-
 .h2-moment {
   color:#FA4A0C;
   text-align: center;
@@ -44,7 +43,7 @@
   align-items:center;
 }
 
-.time {
+.time-person {
  // background: white;
  // width: 50px;
  // height: 50px;
@@ -58,7 +57,8 @@
 .div-pagination-time{
   display:flex;
   justify-content:center;
-  align-items:center;
+  align-items: center;
+  margin-top: -22px;
 }
 
 .div-pagination{
@@ -66,20 +66,42 @@
   max-width: fit-content;
   margin:40px;
 }
+.time-person-diff {
+  display:flex;
+  justify-content:space-evenly ;
+  align-items: center;
+}
 
 .div-time{
   background: white;
   border-radius: 10px;
-  width: 50px;
+  width: 70px;
   height: 50px;
   text-align: center;
+}
+.div-person {
+  background: white;
+  border-radius: 10px;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  padding:3px;
+}
+
+.div-difficulty {
+  background: white;
+  border-radius: 10px;
+  text-align: center;
+  width: 86px;
+  height: 50px;
+  padding:3px;
 }
 
 .swiper-show-image{
   width: 210px;
   height:210px;
   border-radius: 120px;
-  margin-bottom:40px;
+  // margin-bottom:40px;
   object-fit: cover;
 }
 
@@ -90,4 +112,15 @@
 
 .orange {
   color: #FA4A0C!important;
+}
+
+.card-white {
+  background: white;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+}
+.chrono {
+  position:absolute;
+  width:16px;
 }
