--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -6,7 +6,7 @@
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
-      placeholder: "Retrouver un georges perdu"
+      placeholder: "Retrouvez votre recette favorite"
     %>
 <!--     <%= submit_tag "Chercher", class: "btn btn-primary" %> -->
   <% end %>
