--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -11,7 +11,7 @@
     <%= text_field_tag :query,
       params[:query],
       class: "form-control rounded",
-      placeholder: "Retrouver la recette de votre gEORGES"
+      placeholder: "Retrouvez une recette"
     %>
 <!--     <%= submit_tag "Rechercher", class: "btn btn-block btn-primary" %> -->
   <% end %>
